<resources>
    <string name="app_name">Project Final</string>
    <string name="new_friend">New Friend</string>
    <string name="view_all">View All</string>
    <string name="addbtn">addBtn</string>
    <string name="name">Name</string>
    <string name="type_something">Type something...</string>
    <string name="school">School</string>
    <string name="github">Github</string>
    <string name="save">Save</string>
    <string name="imgaddphoto">imgAddPhoto</string>
    <string name="schooll">School</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="imgdetailphoto">imgDetailPhoto</string>
    <string name="savebtn">Save</string>
</resources>