<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:context=".Detail_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgDetailPhoto"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/profile_icon"
                android:contentDescription="@string/imgdetailphoto" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvGithub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/github"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/tvSchool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/schooll"
                android:textSize="@dimen/_15ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:backgroundTint="@color/btn_edit"
                android:text="@string/edit"
                android:layout_weight="1"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_5sdp"/>

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:backgroundTint="@color/btn_delete"
                android:text="@string/delete"
                android:layout_weight="1"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_5sdp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>