<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgPhoto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_110sdp"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvSchool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/school"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/tvGithub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/github"
                android:textSize="@dimen/_15ssp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>