<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Edit_Activity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Any new friend?" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgEditPhoto"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_gravity="center"
                android:src="@drawable/profile_icon"
                android:scaleType="fitXY"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/name"
                android:textColor="@color/tv_color"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:hint="@string/type_something">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edNameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_5sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/school"
                android:textColor="@color/tv_color"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:hint="@string/type_something">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edSchoolEdit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_5sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/github"
                android:textColor="@color/tv_color"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:hint="@string/type_something">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edGithubEdit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_5sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSaveEdit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:backgroundTint="@color/tv_color"
                android:text="@string/savebtn"
                android:textAllCaps="false"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>