<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home_Activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbHome"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Hello, How are you?" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_friend"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvViewAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_150sdp"
                    android:text="@string/view_all"
                    android:textColor="@color/tv_color"
                    android:textSize="@dimen/_15ssp" />

            </LinearLayout>

            <SearchView
                android:id="@+id/edSearch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNewFriend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/flAdd"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="28dp"
            android:backgroundTint="@color/add"
            android:contentDescription="@string/addbtn"
            android:src="@drawable/ic_baseline_add_24" />

    </RelativeLayout>

</LinearLayout>